@@ -1,3 +1,7 @@
+2005-07-11  Caleb Moore <c.moore@student.unsw.edu.au>
+
+	* rsvg-structure.c: Bug 309885
+
 2005-06-30  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-image.c: Bug 309220, from joss@debian.org
